--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Express NodeJS",
   "main": "api/server.ts",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "build-win:prod": "set NODE_ENV=production&& tsc"
   },
   "keywords": [
     "Express"
