--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "build-win:prod": "set NODE_ENV=production&& tsc",
-    "start:prod": "export NODE_ENV=production&& sudo pm2 start ./build/api/server.js"
+    "start:prod": "export NODE_ENV=production&& pm2 start ./build/server.js"
   },
   "keywords": [
     "Express"
